fixed nav bar layout bug

--- a/src/app/App.css
+++ b/src/app/App.css
@@ -1,28 +1,47 @@
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 60px;
+    animation: App-logo-spin infinite 20s linear;
+    height: 60px;
 }
 
 .hidden {
-  display: none;
+    display: none;
 }
 
 .nav-image-is-rounded {
-  border-radius: 10px;
+    border-radius: 10px;
+}
+
+.grid-container {
+    display: flex;
+    margin: 0 20px;
+    justify-content: space-around;
+    width: 100vw;
+}
+
+.nav-item:nth-child(3) {
+    flex-grow: 2;
+		display: flex;
+		justify-content: center;
+		align-items: center;
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  } to {
-    transform: rotate(360deg);
-  }
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
 
 .hide {
-  display: none;
+    display: none;
 }
 
 .show {
-  display: block;
+    display: block;
+}
+
+.nav-spacing {
+	padding-right: 10px;
 }
